[tool.poetry]
name = "tgr-warden-outbound-src"
version = "0.1.0"
description = ""
authors = ["chifengchou <chifeng@horangi.com>"]

[tool.poetry.dependencies]
python = "3.8"
tgr-backend-common = {path = "./tgr-backend-common"}
pydantic = "^1.8.2"
aws-lambda-powertools = {extras = ["pydantic"], version = "^1.25.1"}
devtools = "^0.8.0"
psycopg2-binary = "^2.9.1"
sentry-sdk = "^1.5.5"
blinker = "^1.4"

[tool.poetry.dev-dependencies]
boto3 = "^1.20.54"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v --ignore=tgr-backend-common"
